feat: add swagger refactor: change project structure

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,9 @@ spring:
       authentication-database: admin
 server:
   port: 8088
+
+springdoc:
+  swagger-ui:
+    enabled: true
+  api-docs:
+    enabled: true
